# tile-ip

./: .gitignore  README.md  pyproject.toml  test_mem.py
.sisyphus/: boulder.json
.sisyphus/drafts/: gpt2-upgrades.md
.sisyphus/plans/: gpt2-temporal-integration.md  rtl-stitching-and-dp-solver.md  tiled-ip-implementation.md  tiled-ip-verilog-cocotb.md  (+2 more)
docs/: AUTOTUNER.md  DESIGN_DECISIONS.md  FRONTEND_API.md  GETTING_STARTED.md  GPT2_ROADMAP.md  GPT_TUTORIAL.md  IP_CATALOG.md  IP_LIBRARY.md  IP_USAGE.md  PARETO_VISUALIZATION.md  SHAPE_PROPAGATION.md  STITCHING.md  TESTING.md  TRANSFORMER_BLOCK.md
examples/: ffn.json  ffn_block.py  temporal_gemm.py  transformer_block.py
scripts/: characterize_ips.py  characterize_ips_parallel.py  export_verilog.py  generate_ip_pareto_plots.py  generate_subgraph.py  run_transformer_autotune.py  visualize_ip_graph.py  visualize_pareto.py
src/: .thing.temp.py.kate-swp  autotuner.py  frontend.py  solver.py  stitcher.py  thing.temp.py  transformer_block.py
tests/: test_activation.py  test_alu.py  test_autotuner.py  test_axi_stream_base.py  test_bram_init_export.py  test_characterization_export.py  test_compound_attention.py  test_compound_ffn.py  test_compound_mem_compute.py  test_fifo.py  test_gemm.py  test_generate_subgraph.py  test_mem_router.py  test_multi_bank_bram.py  test_norm.py  test_ref_models.py  test_shape_adapter.py  test_shape_propagation.py  test_softmax.py  test_solver.py  test_stateful_norm.py  test_stateful_softmax.py  test_stitcher.py  test_stitcher_fanin.py  test_temporal_gemm.py  test_transformer_block.py
(+1072 files in other folders)
